// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-q44vm6,
[data-css-q44vm6] {
  -webkit-transition: all 0.3s ease-in-out;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  top: 50%;
  left: 50%;
  height: 70px;
  position: absolute;
  width: 70px;
  border-radius: 6px;
  background-color: rgba(255,255,255,0);
  transition: all 0.3s ease-in-out;
  display: block;
  overflow: hidden;
}

<TestPage>
  <SearchBar
    onClick={[Function]}
    view={false}
  >
    <StyledWrapper
      onClick={[Function]}
      open={false}
    >
      <div
        className="css-q44vm6"
        onClick={[Function]}
      />
    </StyledWrapper>
  </SearchBar>
</TestPage>
`;

exports[`enzyme.render 1`] = `
.css-q44vm6,
[data-css-q44vm6] {
  -webkit-transition: all 0.3s ease-in-out;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  top: 50%;
  left: 50%;
  height: 70px;
  position: absolute;
  width: 70px;
  border-radius: 6px;
  background-color: rgba(255,255,255,0);
  transition: all 0.3s ease-in-out;
  display: block;
  overflow: hidden;
}

<div
  class="css-q44vm6"
/>
`;

exports[`enzyme.shallow 1`] = `
<SearchBar
  onClick={[Function]}
  view={false}
/>
`;
